force-app/main/default/objects/Priority_Plan__c/Priority_Plan__c.object-meta.xml
<CustomObject>
    <description>Priority Plan Summary is the shell record that will be submitted by the sales rep for approval by the manager.</description>
    <label>Priority Plan Summary</label>
    <nameField>
        <label>Priority Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Priority Plan Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>