force-app/main/default/objects/Priority_Plan__c/fields/Approval_Manager__c.field-meta.xml
<CustomField>
    <fullName>Approval_Manager__c</fullName>
    <formula>Owner:User.IM_RSM__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Manager displayed on the user record for the owner of the priority plan summary. This user will receive the approval alert.</inlineHelpText>
    <label>Approval Manager</label>
    <type>Text</type>
</CustomField>