force-app/main/default/objects/Priority_Plan__c/fields/Last_Batch_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Batch_Run_Date__c</fullName>
    <description>This field is to indicate the last day a batch was run.</description>
    <label>Last Batch Run Date</label>
    <type>Date</type>
</CustomField>