force-app/main/default/objects/Priority_Plan__c/fields/Manager_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manager Email Sent?</label>
    <type>Checkbox</type>
</CustomField>