force-app/main/default/objects/Priority_Plan__c/fields/Priority_Summary_Approver__c.field-meta.xml
<CustomField>
    <fullName>Priority_Summary_Approver__c</fullName>
    <inlineHelpText>This is the user that will be approving or rejecting the priority summary record once submitted.</inlineHelpText>
    <label>Priority Summary Approver</label>
    <type>Email</type>
</CustomField>