force-app/main/default/objects/Priority_Plan__c/fields/Sales_Rep_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Rep Email Sent?</label>
    <type>Checkbox</type>
</CustomField>