force-app/main/default/objects/Priority_Plan__c/listViews/My_Priority_Summaries.listView-meta.xml
<ListView>
    <fullName>My_Priority_Summaries</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Approval_Manager__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Priority Summaries</label>
    <language>en_US</language>
</ListView>